# rust_exercises

./: Cargo.toml  README.md
ex_2_challenge/: Cargo.toml
ex_2_challenge/src/: main.rs
ex_2_challenge/templates/: index.html
ex_5_challenge/: Cargo.toml
ex_5_challenge/src/: main.rs
ex_5_challenge/templates/: index.html
ex_7_challenge/: Cargo.toml
ex_7_challenge/src/: main.rs
ex_7_challenge/templates/: index.html  result.html
ex_9_challenge/: Cargo.toml
ex_9_challenge/src/: main.rs
ex_9_challenge/templates/: index.html
src/: main.rs
terminal_exercises/: Cargo.toml
