[package]
name = "ex_5_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
askama_axum = "0.4"
askama = { version = "0.12" }